--- a/res/layout/contact_item.xml
+++ b/res/layout/contact_item.xml
@@ -2,22 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp" >
     <ImageView android:id="@+id/presence_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/presence_offline"
         android:layout_gravity="center_vertical"
         android:contentDescription="@null"
-        android:paddingLeft="10dp"
         android:paddingRight="10dp"/>
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"/>
+            android:layout_height="wrap_content" />
         <TextView android:id="@+id/status_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
