--- a/res/layout/activity_contact_list.xml
+++ b/res/layout/activity_contact_list.xml
@@ -3,6 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:gravity="center_vertical"
+        android:background="@drawable/portrait_bg">
+        <TextView android:id="@+id/my_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
+        <Spinner android:id="@+id/my_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <ExpandableListView android:id="@+id/contact_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
