--- a/res/layout/activity_contact_list.xml
+++ b/res/layout/activity_contact_list.xml
@@ -18,7 +18,9 @@
             android:paddingRight="10dp" />
         <Spinner android:id="@+id/my_status"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
+            android:layout_marginBottom="-10dp" />
     </LinearLayout>
     <ExpandableListView android:id="@+id/contact_list"
         android:layout_width="match_parent"
