--- a/res/layout/status_item.xml
+++ b/res/layout/status_item.xml
@@ -6,6 +6,7 @@
     android:paddingRight="5dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal" >
     <ImageView android:id="@+id/icon"
         android:layout_width="wrap_content"
