--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -8,11 +8,10 @@
         android:orientation="horizontal" >
         <TextView android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:layout_weight="1"
+            android:layout_weight="0.25"
             android:text="@string/user_name" />
         <EditText android:id="@+id/username_input"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:lines="1"
             android:layout_weight="1"
@@ -23,15 +22,28 @@
         android:orientation="horizontal" >
         <TextView android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:layout_weight="1"
+            android:layout_weight="0.25"
             android:text="@string/password" />
         <EditText android:id="@+id/password_input"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:lines="1"
             android:layout_weight="1"
             android:inputType="textPassword" />
+    </LinearLayout>
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <TextView android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:text="@string/status" />
+        <Spinner android:id="@+id/status_selector"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="-10dp"
+            android:layout_marginBottom="-10dp" />
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content" >
