--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:orientation="vertical" >
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal" >
         <TextView android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -19,6 +21,7 @@
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal" >
         <TextView android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -33,6 +36,7 @@
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal" >
         <TextView android:layout_width="0dp"
             android:layout_height="wrap_content"
